--- a/backend-microservices/user-service/package.json
+++ b/backend-microservices/user-service/package.json
@@ -25,6 +25,7 @@
     "@nestjs/microservices": "^10.3.10",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "bcrypt": "^5.1.1",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.5.1",
     "reflect-metadata": "^0.2.0",
