--- a/backend-microservices/task-service/package.json
+++ b/backend-microservices/task-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user-service",
+  "name": "task-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,11 +22,9 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.2.0",
     "@nestjs/microservices": "^10.3.10",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
-    "bcrypt": "^5.1.1",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.5.1",
     "reflect-metadata": "^0.2.0",
