--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.7.2",
     "eslint-config-prettier": "^9.1.0",
     "next": "14.2.4",
     "prettier": "^3.3.2",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18"
   },
   "devDependencies": {
