--- a/backend-microservices/api-gateway/package.json
+++ b/backend-microservices/api-gateway/package.json
@@ -24,9 +24,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.3.10",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/socket.io-client": "^3.0.0",
     "kafkajs": "^2.2.4",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
