--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.16.0",
     "@mui/x-date-pickers": "^7.12.0",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
@@ -23,7 +24,8 @@
     "prettier": "^3.3.2",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.4",
